Update GitHub Actions workflow for IPA build

--- a/.github/workflows/build-ipa.yml
+++ b/.github/workflows/build-ipa.yml
@@ -4,24 +4,32 @@ on:
   push:
     branches:
       - custom-id  # Change if your branch name is different
-  workflow_dispatch:  # Allows manual runs from GitHub UI
+  workflow_dispatch:  # Manual trigger from GitHub UI
 
 jobs:
   build:
-    runs-on: macos-latest  # Or macos-14 if you prefer stability
+    runs-on: macos-latest
 
     steps:
+      - name: Select Xcode 16.4
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '16.4'
+
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
-      - name: Build the app (unsigned, custom bundle ID)
+      - name: Archive app (unsigned, custom bundle ID)
         run: |
-          xcodebuild -project LiveContainer.xcodeproj \
-            -target LiveContainer \
-            -configuration Release \
+          xcodebuild archive \
+            -project LiveContainer.xcodeproj \
+            -scheme LiveContainer \
             -sdk iphoneos \
-            -derivedDataPath DerivedData \
-            clean build \
+            -configuration Release \
+            -archivePath archive.xcarchive \
+            -arch arm64 \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO \
             CODE_SIGN_IDENTITY="" \
@@ -30,8 +38,21 @@ jobs:
       - name: Package unsigned IPA
         run: |
           mkdir -p Payload
-          cp -r DerivedData/Build/Products/Release-iphoneos/jump.app Payload/
+          
+          # Find the built .app (safe in case name is LiveContainer.app or jump.app)
+          APP_PATH=$(find archive.xcarchive/Products/Applications -name "*.app" -type d)
+          
+          if [ -z "$APP_PATH" ]; then
+            echo "Error: No .app bundle found in archive!"
+            ls -R archive.xcarchive/Products/Applications
+            exit 1
+          fi
+          
+          echo "Found app bundle: $APP_PATH"
+          cp -r "$APP_PATH" Payload/
+          
           zip -qr LiveContainer-custom-unsigned.ipa Payload/
+          echo "IPA packaged successfully!"
 
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v4
